--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 <body>
     <header>
         <nav class="hesder-nav">
             <div class="nav-logo">Zoltan Kore</div>
-            <ul>
+            <ul class="nav-links">
                 <li> <a href="./index.html">Home</a> </li>
                 <li> <a href="./experience.html">Experience</a> </li>
                 <li> <a href="./contact.html">Contact</a> </li>
