--- a/index.html
+++ b/index.html
@@ -4,26 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css">
     <title>Portfolio oldal</title>
 </head>
 <body>
     <header>
-        <nav class="hesder-nav">
+        <nav class="header-nav">
             <div class="nav-logo">Zoltan Kore</div>
-            <ul>
-                <li> <a href="./index.html">Home</a> </li>
-                <li> <a href="./experience.html">Experience</a> </li>
-                <li> <a href="./contact.html">Contact</a> </li>
-            </ul>
+            <div class="dropdown-menu">
+                <button class="dropbtn">III</button>
+                <ul class="nav-links">
+                    <li class="home"> <a href="./index.html">Home</a> </li>
+                    <li class="portfolio"> <a href="#portfolio">Portfolio</a> </li>
+                    <li class="experience"> <a href="#experience">Experience</a> </li>
+                    <li class="contact"> <a href="#contact">Contact</a> </li>
+                </ul>
+            </div>
         </nav>
-        <section>
+        <section class="tagline">
             <h1>Portfolio</h1>
-            <a href="#" class="btn">CV</a>
-            <a href="./contact.html">Contact</a>
+            <a href="#" class="btn_cv">CV</a>
+            <a href="#contact" class="btn_contact">Contact</a>
         </section>
     </header>
-    <main></main>
+    <main>
+        <article class="experience-page" id="experience">
+            <h2>Experience</h2>
+            <section class="experience-contener">
+                <div>
+                    <img src="./pictures/html5-brands.svg" alt="HTML">
+                    <h3>HTML</h3>
+                </div>
+                <div>
+                    <img src="./pictures/css3-alt-brands.svg" alt="CSS">
+                    <h3>CSS</h3>
+                </div>
+                <div>
+                    <img src="./pictures/js-square-brands.svg" alt="Javascript">
+                    <h3>JavaScript</h3>
+                </div>
+                <div>
+                    <img src="./pictures/react-brands.svg" alt="React">
+                    <h3>React</h3>
+                </div>
+            </section>
+            
+        </article>
+        
+        <article class="contact-page" id="contact">
+            <p>You can reach me if you contact this <a href="mailto:programozas.coding@gmail.com">email</a> </p>
+        </article>
+    </main>
     <footer></footer>
 </body>
 </html>
